# opencode_review

./: .gitignore  DESIGN.md  config.yaml  pyproject.toml
prompts/: block_analysis.txt  chunk_boundary.txt
src/opencode_review/: __init__.py  analyzer.py  chunker.py  cli.py  db.py  extractor.py  models.py  reporter.py  state.py
