[project]
name = "opencode-review"
version = "0.1.0"
description = "OpenCode 会话回顾分析工具"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[project.scripts]
retro = "opencode_review.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_review"]
